@@ -1,3 +1,7 @@
+2003-11-29  Karl Berry  <karl@gnu.org>
+
+	* argp-{help.c,parse.c,namefrob.h}, argp.h: update from libc.
+
 2003-11-23  Paul Eggert  <eggert@twinsun.com>
             Bruno Haible  <bruno@clisp.org>
 
